# augorama-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yaml
examples/: get.rest
src/: augieactor.rs  augiemsg.rs  demo.rs  lib.rs  main.rs
src/au/: actor.rs  mod.rs  model.rs  msg.rs
tests/: actor_test.rs  integration_test.rs  model_test.rs
